Update footer responsive and favicon

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="타이포그래피 스케일">
-  <title>Typography Scale</title>
+  <meta name="description" content="타이포그래픽 스케일">
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <title>Typographic Scale</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -20,7 +22,7 @@
       <div class="header-container">
         <div class="header-flex-wrap">
           <a href="index.html">
-            <h1 class="header-title">Typography Scale</h1>
+            <h1 class="header-title">Typographic Scale</h1>
           </a>
           <button type="button" class="detail-controls-button">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="44" height="44" viewBox="0 0 44 44">
@@ -114,8 +116,10 @@
       </div>
     </main>
     <footer id="footer">
-      <p>© 2021 Joung Yeongsin Copyright</p>
-      <p>Built with <b>Vanila JS</b></p>
+      <div class="footer-wrap">
+        <p>© 2021 Joung Yeongsin Copyright</p>
+        <p>Built with <b>Vanila JS</b></p>
+      </div>
     </footer>
   </div>
   
